--- a/touchbase-react/src/components/LandingPage.css
+++ b/touchbase-react/src/components/LandingPage.css
@@ -1,15 +1,3 @@
-/*h1 {
-  font-size: 70px;
-  color: white;
-  text-align: center;
-}
-
-h4 {
-  font-size: 20px;
-  color: white;
-  text-align: center;
-}*/
-
 .landingPage {
   //background-color: orange;
 }
@@ -21,14 +9,10 @@ h4 {
   align-items: center;
   justify-content: left;
   padding-left: 30px;
-  //text-align: center;
-  //font-size: 30px;
-  //font-family: "Monaco", monospace;
-  //font-weight: 900;
 }
 
 .nav {
-  background-color: #5053f2;
+  background-color: #5B5FF1;
   min-height: 80vh;
   display: flex;
   flex-direction: column;
@@ -36,7 +20,7 @@ h4 {
   justify-content: center;
   font-family: "HelveticaNeue-Medium";
   color: white;
-  font-size: 60px;
+  font-size: 70px;
   color: white;
   text-align: center;
   line-height: 1;
@@ -48,39 +32,52 @@ h4 {
   padding-bottom: 30px;
 }
 
-.nav-button {
+/*.nav-button {
   background-color: black;
   border: none;
-  color: yellow;
   padding: 5px 5px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 20px;
+}*/
+
+.sign-in-button  {
+  background-color: white;
+  color: black;
+  font-size: 20px;
+  padding: 10px 20px;
+  border-radius: 12px;
+  font-family: "HelveticaNeue-Light", sans-serif;
 }
 
 .content-panel-one {
   padding-top: 70px;
-  padding-left: 70px;
-  padding-right: 70px;
   padding-bottom: 70px;
   //background-color: yellow;
+  width: 100%;
+  height: 100%;
+}
+
+.content-panel-one-responsive {
+  //background-color: red;
+  width: 75%;
+  height: 75%;
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
 }
 
 .content-panel-one-text {
   float: left;
-  font-family:"Arial", sans-serif;
-  //font-size: 20px;
-  height: auto;
   width: 50%;
-  //padding-right: 30px;
-  padding-left: 30px;
-  margin: auto;
+  align-items: center;
+  font-family:"HelveticaNeue-Light", sans-serif;
   //background-color: purple;
 }
 
 .why-touchbase {
-  color: #5474fb;
+  color: #5B5FF1;
   font-size: 20px;
   padding-bottom: 10px;
 }
@@ -92,36 +89,61 @@ h4 {
 }
 
 .why-touchbase-answer {
-  font-size: 15px;
+  font-size: 20px;
 }
 
 .content-panel-one-image {
   float: right;
-  //width: 80px;
-  //height: 80px;
-  padding-right: 50px;
+  width: 50%;
+  height: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   //background-color: blue;
 }
 
-.content-panel-two {
-  padding-top: 300px;
-  //background-color: red;
+.img1 {
+  width: 100%;
+  height: auto;
+}
 
+.content-panel-two {
+  padding-top: 70px;
+  padding-bottom: 70px;
+  width: 100%;
+  height: 100%;
+
+}
+
+.content-panel-two-responsive {
+  //background-color: red;
+  width: 75%;
+  height: 75%;
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
 }
 
 .content-panel-two-text {
   float: right;
-  font-family:"Arial", sans-serif;
-  padding-right: 100px;
+  width: 50%;
+  align-items: center;
+  font-family:"HelveticaNeue-Light", sans-serif;
+  //background-color: purple;
 }
 
 .content-panel-two-image {
   float: left;
-  padding-left: 100px;
+  width: 50%;
+  height: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  //background-color: blue;
 }
 
 .types-of-touchbases {
-  color: #5474fb;
+  color: #5B5FF1;
   font-size: 20px;
   padding-bottom: 10px;
 }
@@ -133,7 +155,12 @@ h4 {
 }
 
 .types-of-touchbases-answers {
-  font-size: 15px;
+  font-size: 20px;
+}
+
+.img2 {
+  width: 100%;
+  height: auto;
 }
 
 .divider {
@@ -147,22 +174,47 @@ h4 {
 }
 
 .content-panel-three {
-  padding-top: 10px;
+  padding-top: 70px;
+  padding-bottom: 70px;
+  background-color: #E8E9ED;
+  width: 100%;
+  height: 100%;
 }
 
 .content-panel-three-image {
   float: right;
-  padding-right: 100px;
+  width: 50%;
+  height: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  //background-color: blue;
 }
 
 .content-panel-three-text {
   float: left;
-  font-family:"Arial", sans-serif;
-  padding-left: 100px;
+  width: 50%;
+  align-items: center;
+  font-family:"HelveticaNeue-Light", sans-serif;
+  //background-color: purple;
+}
+
+.img3 {
+  width: 50%;
+  height: auto;
+}
+
+.content-panel-three-responsive {
+  //background-color: red;
+  width: 75%;
+  height: 75%;
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
 }
 
 .all-categories {
-  color: #5474fb;
+  color: #5B5FF1;
   font-size: 20px;
   padding-bottom: 10px;
 }
@@ -174,7 +226,113 @@ h4 {
 }
 
 .all-categories-answer {
-  font-size: 15px;
+  font-size: 20px;
+}
+
+.content-panel-four {
+  padding-top: 70px;
+  padding-bottom: 70px;
+  background-color: #E8E9ED;
+  width: 100%;
+  height: 100%;
+}
+
+.content-panel-four-responsive {
+  //background-color: red;
+  width: 75%;
+  height: 75%;
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+  //align-items: center;
+  //justify-content: center;
+  //flex-direction: row;
+}
+
+.how-it-works{
+  font-family: "HelveticaNeue-Light", sans-serif;
+  font-size: 30px;
+  color: black;
+  //font-weight: bold;
+  text-align: center;
+}
+
+.block-one {
+  float: left;
+  width: 33.33%;
+  height: 33.33%;
+  display: table-row;
+  align-items: center;
+  justify-content: center;
+  //background-color: blue;
+  text-align: center;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.block-one-text {
+  font-size: 20px;
+  font-family:"HelveticaNeue-Light", sans-serif;
+  line-height: 1.25;
+}
+
+.block-three {
+  float: right;
+  width: 33.33%;
+  height: 33.33%;
+  display: table-row;
+  align-items: center;
+  justify-content: center;
+  //background-color: purple;
+  text-align: center;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.block-two-text {
+  font-size: 20px;
+  font-family:"HelveticaNeue-Light", sans-serif;
+  line-height: 1.25;
+}
+
+.block-two {
+  float: left;
+  width: 33.33%;
+  height: 33.33%;
+  display: table-row;
+  align-items: center;
+  justify-content: center;
+  //background-color: white;
+  text-align: center;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.block-three-text {
+  font-size: 20px;
+  font-family:"HelveticaNeue-Light", sans-serif;
+  line-height: 1.25;
+}
+
+.number_one {
+  width: 15%;
+  height: 15%;
+}
+
+.number_two {
+  width: 15%;
+  height: 15%;
+}
+
+.number_three {
+  width: 15%;
+  height: 15%;
 }
 
 .footer {
