--- a/touchbase-react/src/components/Login/Login.css
+++ b/touchbase-react/src/components/Login/Login.css
@@ -1,33 +1,33 @@
-.sign-up-page-div {
+.login-page-div {
   background-color: white;
   min-height: 100vh;
   align-items: center;
   //text-align: center;
 }
 
-.sign-up-page-responsive {
+.login-page-responsive {
   //background-color: red;
   margin: 0 auto;
   position: relative;
   overflow: hidden;
-  padding-top: 100px;
+  padding-top: 50px;
 }
 
-.sign-up-logo {
+.login-logo {
   //background-color: blue;
   text-align: center;
 }
 
-.sign-up-header {
+.login-header {
   //background-color: green;
   font-family:"HelveticaNeue-Light", sans-serif;
-  font-size: 30px;
+  font-size: 25px;
   line-height: 1.5;
   text-align: center;
   padding-bottom: 20px;
 }
 
-.sign-up-form {
+.login-form {
   background-color: #E8E9ED;
   padding-top: 40px;
   padding-left: 80px;
@@ -37,7 +37,7 @@
   margin: auto;
 }
 
-.sign-up-input {
+.login-input {
   width: 100%;
   height: 100%;
   padding: 10px 15px;
@@ -47,7 +47,7 @@
   //padding-bottom: 10px;
 }
 
-.sign-up-label {
+.login-label {
   font-family: "HelveticaNeue-Light", sans-serif;
   font-size: 15px;
   text-align: left;
@@ -71,7 +71,7 @@
   padding-top: 20px;
 }
 
-.sign-up-button-submit {
+.login-button-submit {
   padding-top: 20px;
   background-color: #5B5FF1;
   color: white;
@@ -79,4 +79,37 @@
   padding: 10px 20px;
   border-radius: 12px;
   font-family: "HelveticaNeue-Light", sans-serif;
+}
+
+.isInfluencer {
+  padding-top: 20px;
+  text-align: center;
+  position: relative;
+
+}
+
+.toggle-switch-checkbox {
+  height: 25px;
+  width: 25px;
+  color: #5B5FF1;
+  border-radius: 10px;
+}
+
+.redirect-to-signup {
+  padding-top: 20px;
+  font-family: "HelveticaNeue-Light", sans-serif;
+  font-size: 15px;
+  color: black;
+  text-align: center;
+  //position: relative;
+  //min-width: 55%;
+  //align-items: center;
+  //width: 50%;
+}
+
+
+.signup-link {
+  font-family: "HelveticaNeue-Light", sans-serif;
+  font-size: 15px;
+  color: #5B5FF1;
 }
