get and post working for http code + json dict. login and signup completely working.

--- a/touchbase-react/src/components/LandingPage/LandingPage.css
+++ b/touchbase-react/src/components/LandingPage/LandingPage.css
@@ -2,14 +2,14 @@
   //background-color: orange;
 }
 
-.landingPage-header {
+/*.landingPage-header {
   background-color: white;
   height: 8vh;
   display: flex;
   align-items: center;
   justify-content: left;
   padding-left: 30px;
-}
+}*/
 
 .nav {
   background-color: #5B5FF1;
