your touchbases page done

--- a/touchbase-react/src/components/Dashboard/Dashboard.css
+++ b/touchbase-react/src/components/Dashboard/Dashboard.css
@@ -1,12 +1,12 @@
-.dashboard-content {
+.dashboard-menu-content {
 
 }
 
-.dashboard-welcome {
-  text-align: center;
-  font-family: "HelveticaNeue-Light", sans-serif;
-  font-size: 30px;
-}
+/*.dashboard-welcome {
+  //text-align: center;
+  //font-family: "HelveticaNeue-Light", sans-serif;
+  //font-size: 30px;
+}*/
 
 .dashboard-menu {
 
