--- a/touchbase-react/src/components/Dashboard/Dashboard.css
+++ b/touchbase-react/src/components/Dashboard/Dashboard.css
@@ -1,27 +1,7 @@
-.dashboard-menu-content {
-
-}
-
-/*.dashboard-welcome {
-  //text-align: center;
-  //font-family: "HelveticaNeue-Light", sans-serif;
-  //font-size: 30px;
-}*/
-
-.dashboard-menu {
-
-}
-
-.dashboard-items {
-  list-style: none;
-  display: flex;
-  //background-color: red;
-  margin: 20px 0;
-  width: 15%;
-}
-
-.dashboard-links {
-  color: black;
-  font-size: 20px;
-  font-family: "HelveticaNeue-Light", sans-serif;
+.calendar {
+  float: right;
+  width: 85%;
+  margin: 0 auto;
+  overflow: hidden;
+  padding-top: 60px;
 }
