--- a/touchbase-react/src/components/Meetings/Meetings.css
+++ b/touchbase-react/src/components/Meetings/Meetings.css
@@ -1,16 +1,10 @@
-.dashboard-menu {
-  float: left;
-  //background-color: purple;
-  width: 15%;
-}
-
 .your-meetings-content {
-  float: left;
+  float: right;
   width: 85%;
   //background-color: red;
   margin: 0 auto;
   overflow: hidden;
-  padding-bottom: 100px;
+  padding-top: 60px;
 }
 
 .meetings-main-title {
@@ -110,7 +104,7 @@
 
 .join-button {
   color: white;
-  background-color: #5B5FF1;
+  background-color: #5271ff;
   font-size: 15px;
   padding: 6px 16px;
   border-radius: 12px;
