--- a/touchbase-react/src/components/Profile/Profile.css
+++ b/touchbase-react/src/components/Profile/Profile.css
@@ -1,16 +1,10 @@
-.dashboard-menu {
-  float: left;
-  //background-color: purple;
-  width: 15%;
-}
-
 .profile-main-panel {
-  float: left;
+  float: right;
   width: 85%;
   //background-color: red;
   margin: 0 auto;
   overflow: hidden;
-  padding-bottom: 100px;
+  padding-top: 60px;
   text-align: center;
 }
 
@@ -65,7 +59,7 @@
 
 .profile-button {
   color: white;
-  background-color: #5B5FF1;
+  background-color: #5271ff;
   font-size: 15px;
   padding: 6px 16px;
   border-radius: 12px;
@@ -74,7 +68,7 @@
 
 .password-button {
   color: white;
-  background-color: #5B5FF1;
+  background-color: #5271ff;
   font-size: 20px;
   padding: 12px 20px;
   border-radius: 12px;
