--- a/touchbase-react/src/components/Popup/Popup.css
+++ b/touchbase-react/src/components/Popup/Popup.css
@@ -1,10 +1,13 @@
 .popup-box {
   position: fixed;
   background: #00000050;
-  width: 100%;
   height: 100vh;
   top: 0;
   left: 0;
+  width: 100%;
+  //background-color: red;
+  margin-left: 5%;
+  overflow: hidden;
 }
 
 .box {
