--- a/touchbase-react/src/components/YourTouchbases/YourTouchbases.css
+++ b/touchbase-react/src/components/YourTouchbases/YourTouchbases.css
@@ -101,7 +101,17 @@
 
 .headings {
   font-family: "HelveticaNeue-Light", sans-serif;
-  padding-bottom: 30px;
+  padding: 30px;
+  display: grid;
+  grid-gap: 20px;
+}
+
+.touchbase-input {
+  width: 100%;
+  height: 100%;
+  padding: 10px 15px;
+  border-radius: 10px;
+  border-width: thin;
 }
 
 .form-buttoms {
