--- a/touchbase-react/src/components/Popup/PopupClass.css
+++ b/touchbase-react/src/components/Popup/PopupClass.css
@@ -65,7 +65,7 @@
 }
 
 .cost {
-  padding-bottom: 15px;
+  //padding-bottom: 15px;
   text-align: center;
 }
 
@@ -86,7 +86,7 @@
 
 .form-buttoms {
   text-align: center;
-  padding-top: 50px;
+  //padding-top: 20px;
 }
 
 .cancel-button {
