calendar dates working. seller/influencer_id route is working.

--- a/touchbase-react/src/components/Explore/Explore.css
+++ b/touchbase-react/src/components/Explore/Explore.css
@@ -40,11 +40,11 @@
   color: white;
 }
 
-.influencer-name {
+.explore-influencer-name {
   font-size: 25px;
 }
 
-.influencer-category {
+.explore-influencer-category {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
   font-size: 15px;
