--- a/touchbase-react/src/components/Dashboard/Dashboard.css
+++ b/touchbase-react/src/components/Dashboard/Dashboard.css
@@ -12,9 +12,9 @@
   position: relative;
 }
 
-.react-calendar {
+.home-calendar {
   position: absolute;
-  bottom: 100px;
+  bottom: 200px;
   left: 55%;
   transform: translateX(-50%);
 }
@@ -24,5 +24,5 @@
   padding-right: 47%;
   padding-top: 3%;
   font-family: "HelveticaNeue-Light", sans-serif;
-  font-size: 10px;
+  font-size: 40px;
 }
