--- a/touchbase-react/src/components/Popup/Popup1on1.css
+++ b/touchbase-react/src/components/Popup/Popup1on1.css
@@ -1,4 +1,4 @@
-.popup-box {
+.popup-box-oneonone {
   position: fixed;
   background: #00000050;
   height: 100vh;
@@ -10,7 +10,7 @@
   overflow: hidden;
 }
 
-.box {
+.box-oneonone {
   position: relative;
   width: 70%;
   margin: 0 auto;
@@ -24,7 +24,7 @@
   overflow: auto;
 }
 
-.close-icon {
+.close-icon-oneonone{
   content: 'x';
   cursor: pointer;
   position: fixed;
@@ -40,43 +40,38 @@
   font-size: 20px;
 }
 
-.date-picker {
+.date-picker-oneonone {
   padding-bottom: 15px;
   text-align: center;
 }
 
-.from-time-picker {
+.from-time-picker-oneonone {
   padding-bottom: 15px;
   text-align: center;
 }
 
-.to-time-picker {
+.to-time-picker-oneonone {
   padding-bottom: 15px;
   text-align: center;
 }
 
-.max-participants {
+.repeat-weeks-oneonone {
+  padding-bottom: 15px;
+}
+
+.cost-oneonone {
   padding-bottom: 15px;
   text-align: center;
 }
 
-.repeat-weeks {
-  padding-bottom: 15px;
-}
-
-.cost {
-  padding-bottom: 15px;
-  text-align: center;
-}
-
-.headings {
+.headings-oneonone {
   font-family: "HelveticaNeue-Light", sans-serif;
   padding: 15px;
   display: grid;
   grid-gap: 20px;
 }
 
-.touchbase-input {
+.touchbase-input-oneonone {
   width: 100%;
   height: 100%;
   padding: 10px 15px;
@@ -84,12 +79,12 @@
   border-width: thin;
 }
 
-.form-buttoms {
+.form-buttoms-oneonone {
   text-align: center;
   padding-top: 50px;
 }
 
-.cancel-button {
+.cancel-button-oneonone{
   color: white;
   background-color: #5271ff;
   font-size: 15px;
@@ -98,11 +93,36 @@
   font-family: "HelveticaNeue-Light", sans-serif;
 }
 
-.save-button {
+.save-button-oneonone {
   color: white;
   background-color: #5271ff;
   font-size: 15px;
   padding: 6px 16px;
   border-radius: 12px;
   font-family: "HelveticaNeue-Light", sans-serif;
+}
+
+.toast {
+  -webkit-animation: right-to-left 3s linear forwards;
+  animation: right-to-left 3s linear forwards;
+  //-webkit-transition: opacity 1s ease-in-out;
+  //transition: opacity 1s ease-in-out;
+}
+
+@-webkit-keyframes left-to-right{
+    from{left:-100%}
+    to{left:0}
+}
+@-webkit-keyframes right-to-left{
+    from{left:0}
+    to{left:100%}
+}
+
+@keyframes left-to-right{
+    from{left:-100%}
+    to{left:0}
+}
+@keyframes right-to-left{
+    from{left:0}
+    to{left:100%}
 }
