--- a/touchbase-react/src/components/Profile/Profile.css
+++ b/touchbase-react/src/components/Profile/Profile.css
@@ -1,4 +1,89 @@
-.profile-main-panel {
+.content {
+  //background-color: yellow;
+  float: right;
+  width: 88%;
+  text-align: center;
+  font-family: "HelveticaNeue-Light", sans-serif;
+}
+
+.summary {
+  //background-color: #acb3bf;
+  border-bottom: 3px solid black;
+}
+
+.name {
+  font-size: 50px;
+  line-height: 2;
+  padding-top: 100px;
+  font-family: "HelveticaNeue-Light", sans-serif;
+}
+
+.bio {
+  font-size: 20px;
+  line-height: 1.25;
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
+.categories {
+  font-size: 20px;
+  line-height: 2;
+  padding-bottom: 100px;
+  padding-top: 20px;
+}
+
+.additional-info {
+  //background-color: green;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  //border-bottom: 3px solid black;
+}
+
+.email {
+  font-size: 20px;
+  line-height: 1.5;
+  padding-bottom: 80px;
+}
+
+.phone-number {
+  font-size: 20px;
+  line-height: 1.5;
+  padding-bottom: 80px;
+}
+
+.address {
+  font-size: 20px;
+  line-height: 1.5;
+}
+
+.edit-buttons {
+  //background-color: red;
+  //padding-top: 250px;
+
+}
+
+.edit-email {
+  color: white;
+  background-color: #5271ff;
+  font-size: 20px;
+  padding: 6px 16px;
+  border-radius: 12px;
+  font-family: "HelveticaNeue-Light", sans-serif;
+  margin: 25px;
+}
+
+.edit-password {
+  color: white;
+  background-color: #5271ff;
+  font-size: 20px;
+  padding: 6px 16px;
+  border-radius: 12px;
+  font-family: "HelveticaNeue-Light", sans-serif;
+  margin: 25px;
+}
+
+
+/*.profile-main-panel {
   float: right;
   width: 85%;
   //background-color: red;
@@ -73,4 +158,4 @@
   padding: 12px 20px;
   border-radius: 12px;
   font-family: "HelveticaNeue-Light", sans-serif;
-}
+}*/
