--- a/touchbase-react/src/components/Meetings/MeetingsPast.css
+++ b/touchbase-react/src/components/Meetings/MeetingsPast.css
@@ -5,17 +5,23 @@
 }
 
 .meet-heading-past {
-  margin-left: 11%;
+  margin-left: 13vw;
   margin-top: 3%;
   font-family: "HelveticaNeue-Medium", sans-serif;
   font-size: 30px;
   line-height: 1.5;
   margin-bottom: 2%;
+  animation-name: slideInRight;
+  animation-duration: 1s;
+  animation-fill-mode: both;
 }
 
 .meet-links-past {
-  margin-left: 11%;
+  margin-left: 13vw;
   margin-bottom: 2%;
+  animation-name: slideInRight;
+  animation-duration: 1s;
+  animation-fill-mode: both;
 }
 
 .meet-link-past {
@@ -40,13 +46,16 @@
   //background-color: blue;
   border-radius: 20px;
   display: grid;
-  grid-template: 5vh / 33vw 13vw 13vw 13vw 13vw ;
+  grid-template: 5vh / 25vw 13vw 13vw 13vw 13vw ;
   margin-left: 12.5%;
   margin-right: 1%;
   font-size: 15px;
   text-transform: uppercase;
   font-weight: 600;
   color: #a0a096;
+  animation-name: slideInTop;
+  animation-duration: 1s;
+  animation-fill-mode: both;
 }
 
 .ind-meet-content-past > div {
@@ -59,4 +68,26 @@
   font-family: "HelveticaNeue-Light", sans-serif;
   font-size: 20px;
   margin-top: 4vh;
+}
+
+@keyframes slideInTop {
+  from {
+    transform: translate3d(0, 30%, 0);
+    visibility: visible;
+  }
+
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes slideInRight {
+  from {
+    transform: translate3d(5%, 0, 0);
+    visibility: visible;
+  }
+
+  to {
+    transform: translate3d(0, 0, 0);
+  }
 }
