--- a/touchbase-react/src/components/InfluencerInfo/InfluencerInfo.css
+++ b/touchbase-react/src/components/InfluencerInfo/InfluencerInfo.css
@@ -1,11 +1,11 @@
-.login-page-div {
+.influencer-info-page-div {
   background-color: white;
   min-height: 100vh;
   align-items: center;
   //text-align: center;
 }
 
-.login-page-responsive {
+.influencer-info-page-responsive {
   //background-color: red;
   margin: 0 auto;
   position: relative;
@@ -13,21 +13,55 @@
   padding-top: 50px;
 }
 
-.login-logo {
+.influencer-info-logo {
   //background-color: blue;
   text-align: center;
 }
 
-.login-header {
+.influencer-info-bio {
+  height: 5vh;
+  max-width: 100%;
+  min-width: 100%;
+  margin-bottom: 2vh;
+  padding: 10px 15px;
+  border-radius: 10px;
+  border-width: thin;
+}
+
+.select-categories {
+  background-color: yellow;
+  text-align: center;
+}
+.select-categories button{
+  background-color: white;
+  margin-top: 1vh;
+  margin-left: 1vh;
+  margin-right: 1vh;
+  font-family:"HelveticaNeue-Light", sans-serif;
+  //width: 3vw;
+  height: 2vh;
+  padding: 10px;
+}
+
+.select-categories button:hover {
+  background-color: #5271ff;
+  color: white;
+}
+
+.select-categories button:active {
+  background-color: 
+}
+
+.influencer-info-header {
   //background-color: green;
   font-family:"HelveticaNeue-Light", sans-serif;
-  font-size: 25px;
+  font-size: 30px;
   line-height: 1.5;
   text-align: center;
   padding-bottom: 20px;
 }
 
-.login-form {
+.influencer-info-form {
   background-color: #E8E9ED;
   padding-top: 40px;
   padding-left: 80px;
@@ -37,18 +71,18 @@
   margin: auto;
 }
 
-.login-input {
+.influencer-info-input {
   width: 100%;
   height: 100%;
   padding: 10px 15px;
   border-radius: 10px;
   border-width: thin;
+  margin-bottom: 2vh;
   //padding-top: 10px;
   //padding-bottom: 10px;
-  border: 1px solid white;
 }
 
-.login-label {
+.influencer-info-label {
   font-family: "HelveticaNeue-Light", sans-serif;
   font-size: 15px;
   text-align: left;
@@ -56,23 +90,12 @@
   color: black;
 }
 
-.agreement-div {
-  padding-top: 20px;
-  text-align: center;
-}
-
-.agreement {
-  text-align: center;
-  font-family: "HelveticaNeue-Light", sans-serif;
-  font-size: 12px;
-}
-
-.submit-div {
+.influencer-info-submit-div {
   text-align: center;
   padding-top: 20px;
 }
 
-.login-button-submit {
+.influencer-info-button-submit {
   padding-top: 20px;
   background-color: #5271ff;
   color: white;
@@ -80,38 +103,4 @@
   padding: 10px 20px;
   border-radius: 12px;
   font-family: "HelveticaNeue-Light", sans-serif;
-  border: 1px solid #314ed4;
-}
-
-.isInfluencer {
-  padding-top: 20px;
-  text-align: center;
-  position: relative;
-
-}
-
-.toggle-switch-checkbox {
-  height: 25px;
-  width: 25px;
-  color: #5271ff;
-  border-radius: 10px;
-}
-
-.redirect-to-signup {
-  padding-top: 20px;
-  font-family: "HelveticaNeue-Light", sans-serif;
-  font-size: 15px;
-  color: black;
-  text-align: center;
-  //position: relative;
-  //min-width: 55%;
-  //align-items: center;
-  //width: 50%;
-}
-
-
-.signup-link {
-  font-family: "HelveticaNeue-Light", sans-serif;
-  font-size: 15px;
-  color: #5271ff;
 }
