--- a/touchbase-react/src/components/Meetings/IndividualMeetingNew.css
+++ b/touchbase-react/src/components/Meetings/IndividualMeetingNew.css
@@ -11,6 +11,9 @@
   grid-template: 10vh / 30vw 10vw 10vw 10vw 10vw 15vw ;
   font-family: "HelveticaNeue-Light", sans-serif;
   font-size: 15px;
+  animation-name: slideInTop;
+  animation-duration: 1s;
+  animation-fill-mode: both;
 }
 
 .ind-content > div {
@@ -32,4 +35,26 @@
 .ind-title {
   font-weight: 600;
   font-size: 20px;
+}
+
+@keyframes slideInTop {
+  from {
+    transform: translate3d(0, 30%, 0);
+    visibility: visible;
+  }
+
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes slideInRight {
+  from {
+    transform: translate3d(5%, 0, 0);
+    visibility: visible;
+  }
+
+  to {
+    transform: translate3d(0, 0, 0);
+  }
 }
