--- a/touchbase-react/src/components/YourTouchbases/YourTouchbases.css
+++ b/touchbase-react/src/components/YourTouchbases/YourTouchbases.css
@@ -10,20 +10,36 @@
   font-size: 30px;
   line-height: 1.5;
   margin-bottom: 2%;
-  margin-left: 1%;
+  margin-left: 5.5vw;
+  animation-name: slideInRight;
+  animation-duration: 1s;
+  animation-fill-mode: both;
+}
+
+.your-touchbases-header .sub {
+  font-size: 20px;
+  font-family: "HelveticaNeue-Light", sans-serif;
+  animation-name: slideInRight;
+  animation-duration: 1s;
+  animation-fill-mode: both;
 }
 
 .your-touchbases-grid {
   display: grid;
-  grid-template-columns: 25vw 25vw 25vw ;
-  grid-template-rows: repeat(auto-fill, 10vh);
+  grid-template-columns: 20vw 20vw 20vw ;
+  grid-template-rows: repeat(auto-fill, 15vh);
+  grid-gap: 0.25vw;
   justify-content: center;
   text-align: center;
   //background-color: green;
   font-family: "Roboto", sans-serif;
   font-size: 25px;
   line-height: 1.25;
-  height: 10vh;
+  //height: 10vh;
+  animation-name: slideInTop;
+  animation-duration: 1s;
+  animation-fill-mode: both;
+
 }
 
 .your-touchbases-grid > div {
@@ -32,194 +48,85 @@
 }
 
 .your-touchbases-oneonone {
-  background-color: #bfddfa;
+  background-color: #b4c0fa;
   display: grid;
-  line-height: 10vh;
+  //background: linear-gradient(to right, #5271ff,  white);
+  //background:linear-gradient(to right, #c4d7e6 0, #c4d7e6 33%, #66a5ad 33%, #66a5ad 66%, #ff0000 66%, #ff0000 100%);
+  color: white;
+  line-height: 5vh;
   border-radius: 10px;
-  box-shadow: 0 0 10px #000;
-  //margin-top: 2vh;
-  //margin-bottom: 2vh;
+  box-shadow: 3px 3px 3px #abb0b8;
+  
+}
+
+.after-header {
+  margin-top: 5vh;
+  //background-color: yellow;
 }
 
 .your-touchbases-class {
-  background-color: #f5c4c4;
+  background-color: #b4c0fa;
+  //background: linear-gradient(45deg, #b4c0fa 5%, white 95%);
+  //background: linear-gradient(to right, #5271ff,  white);
   display: grid;
-  line-height: 10vh;
+  color: white;
+  line-height: 5vh;
+  //border-radius: 10px;
+  box-shadow: 3px 3px 3px #abb0b8;
   border-radius: 10px;
-  box-shadow: 0 0 10px #000;
+}
+
+.touchbase-type-info {
+  font-size: 15px;
+  line-height: 1;
 }
 
 .your-touchbases-breakout {
-  background-color: #f9e790;
+  background-color: #b4c0fa;
+  //background: linear-gradient(to right, #5271ff,  white);
   display: grid;
-  line-height: 10vh;
+  color: white;
+  line-height: 5vh;
+  //border-radius: 10px;
+  box-shadow: 3px 3px 3px #abb0b8;
   border-radius: 10px;
-  box-shadow: 0 0 10px #000;
 }
 
 .add-touchbase-button {
-  display:block;
-  height: 3.5vh;
-  width: 2vw;
-  border-radius: 50%;
-  border: 2px solid black;
+  width: 20%;
+  border: 2px solid white;
   background-color: white;
   font-size: 20px;
-  position: absolute;
-  margin-top: 8vh;
-  margin-left: 10.25vw;
-  z-index: 0;
+  border-radius: 10px;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 4vh;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.yourtouchbases-main {
+.touchbases-popup {
+  width: 100%;
+  height: 100%;
   background-color: yellow;
 }
 
-.main-title {
-  font-family: "HelveticaNeue-Light", sans-serif;
-  font-size: 30px;
-  text-align: center;
-  width: 100%;
-  line-height: 2;
+@keyframes slideInTop {
+  from {
+    transform: translate3d(0, 30%, 0);
+    visibility: visible;
+  }
+
+  to {
+    transform: translate3d(0, 0, 0);
+  }
 }
 
-.all-touchbases-content {
-  padding-top: 60px;
-  float: right;
-  width: 91%;
-  //background-color: red;
-  margin: 0 auto;
-  overflow: hidden;
-}
+@keyframes slideInRight {
+  from {
+    transform: translate3d(5%, 0, 0);
+    visibility: visible;
+  }
 
-.touchbases-main {
-  width: 75%;
-  //background-color: blue;
-  margin: 0 auto;
-  //position: inherit;
-  //overflow: hidden;
-  border:2px solid black;
-  border-radius: 10px;
-  padding: 10px;
-}
-
-.touchbases-icon {
-  width: 50%;
-  height: 50%;
-}
-
-.touchbases-header {
-  //background-color: orange;
-  height: 5vh;
-}
-
-.touchbases-header-image {
-  float: left;
-  //width: 10%;
-  //padding-right: 10px;
-}
-
-.touchbases-header-text {
-  float: left;
-  //width: 80%;
-  font-family: "HelveticaNeue-Light", sans-serif;
-  font-size: 20px;
-  padding-top: 10px;
-}
-
-.touchbases-add-button {
-  text-align: center;
-  padding-top: 20px;
-}
-
-.add-touchbases {
-  color: white;
-  background-color: #5271ff;
-  font-size: 15px;
-  padding: 6px 16px;
-  border-radius: 12px;
-  font-family: "HelveticaNeue-Light", sans-serif;
-}
-
-.individual-touchbases{
-  text-align: center;
-  font-size: 15px;
-  font-family: "HelveticaNeue-Light", sans-serif;
-}
-
-.date-picker {
-  padding-bottom: 30px;
-  text-align: center;
-}
-
-.from-time-picker {
-  padding-bottom: 30px;
-  text-align: center;
-}
-
-.to-time-picker {
-  padding-bottom: 30px;
-  text-align: center;
-}
-
-.max-participants {
-  padding-bottom: 30px;
-  text-align: center;
-}
-
-.cost {
-  padding-bottom: 30px;
-  text-align: center;
-}
-
-.headings {
-  font-family: "HelveticaNeue-Light", sans-serif;
-  padding: 30px;
-  display: grid;
-  grid-gap: 20px;
-}
-
-.touchbase-input {
-  width: 100%;
-  height: 100%;
-  padding: 10px 15px;
-  border-radius: 10px;
-  border-width: thin;
-}
-
-.form-buttoms {
-  text-align: center;
-}
-
-.cancel-button {
-  color: white;
-  background-color: #5271ff;
-  font-size: 15px;
-  padding: 6px 16px;
-  border-radius: 12px;
-  font-family: "HelveticaNeue-Light", sans-serif;
-}
-
-.save-button {
-  color: white;
-  background-color: #5271ff;
-  font-size: 15px;
-  padding: 6px 16px;
-  border-radius: 12px;
-  font-family: "HelveticaNeue-Light", sans-serif;
+  to {
+    transform: translate3d(0, 0, 0);
+  }
 }
