--- a/touchbase-react/src/components/YourTouchbases/YourTouchbases.css
+++ b/touchbase-react/src/components/YourTouchbases/YourTouchbases.css
@@ -1,6 +1,7 @@
 .your-touchbases-content {
   margin-left: 10%;
   //background-color: yellow;
+  padding-bottom: 10vh;
 }
 
 .your-touchbases-header {
@@ -16,6 +17,23 @@
   animation-fill-mode: both;
 }
 
+.add-touchbase-button {
+  text-align: center;
+  font-size: 1vw;
+  font-weight: 200;
+  margin-top: 3vh;
+  background: white;
+  border: 1px solid white;
+  border-radius: 10px;
+  width: 3vw;
+}
+
+.add-new-touchbase-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .your-touchbases-header .sub {
   font-size: 20px;
   font-family: "HelveticaNeue-Light", sans-serif;
@@ -24,7 +42,119 @@
   animation-fill-mode: both;
 }
 
-.your-touchbases-grid {
+.your-touchbases-grid-content {
+  animation-name: slideInTop;
+  animation-duration: 1s;
+  animation-fill-mode: both;
+}
+
+.your-touchbases-one-on-one {
+  //background-color: yellow;
+  display: grid;
+  grid-template-columns: 5vw 73vw;
+  margin-left: 5.5vw;
+  margin-right: 5.5vw;
+  //border-radius: 10px;
+  margin-top: 1vh;
+  margin-bottom: 2vh;
+  //padding-bottom: 1vh;
+  //border-bottom: 2px solid black;
+}
+
+.your-touchbases-class {
+  //background-color: yellow;
+  display: grid;
+  grid-template-columns: 5vw 73vw;
+  margin-left: 5.5vw;
+  margin-right: 5.5vw;
+  //border-radius: 10px;
+  margin-top: 1vh;
+  margin-bottom: 2vh;
+  //padding-bottom: 1vh;
+  //border-bottom: 2px solid black;
+}
+
+.your-touchbases-breakout {
+  display: grid;
+  grid-template-columns: 5vw 73vw;
+  margin-left: 5.5vw;
+  margin-right: 5.5vw;
+  //border-radius: 10px;
+  margin-top: 1vh;
+  margin-bottom: 2vh;
+  //padding-bottom: 1vh;
+  //border-bottom: 2px solid black;
+}
+
+.ind-one-on-one {
+  //grid-column-start: 2;
+  //background-color: blue;
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  margin-left: 1vw;
+}
+
+.ind-class {
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  margin-left: 1vw;
+}
+
+.ind-breakout {
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  margin-left: 1vw;
+}
+
+.one-on-one-heading {
+  grid-column-start: 1;
+  background-color: #4c98ed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5vw;
+  font-weight: 600;
+  color: white;
+  //border-radius: 10px;
+}
+
+.class-heading {
+  grid-column-start: 1;
+  background-color: #ef7d7d;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5vw;
+  font-weight: 600;
+  color: white;
+  //border-radius: 10px;
+}
+
+.breakout-heading {
+  grid-column-start: 1;
+  background-color: #f4b959;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 1vw;
+  font-weight: 600;
+  color: white;
+  //border-radius: 10px;
+}
+
+/*.your-touchbases-grid {
   display: grid;
   grid-template-columns: 20vw 20vw 20vw ;
   grid-template-rows: repeat(auto-fill, 15vh);
@@ -56,7 +186,7 @@
   line-height: 5vh;
   border-radius: 10px;
   box-shadow: 3px 3px 3px #abb0b8;
-  
+
 }
 
 .after-header {
@@ -107,11 +237,11 @@
   width: 100%;
   height: 100%;
   background-color: yellow;
-}
+}*/
 
 @keyframes slideInTop {
   from {
-    transform: translate3d(0, 30%, 0);
+    transform: translate3d(0, 10%, 0);
     visibility: visible;
   }
 
